[package]
name = "bls48581"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]
name = "bls48581"

[dependencies]
hex = "0.4.3"
serde_json = "1.0.117"
uniffi = {  version= "0.25", features = ["cli"]}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"

[build-dependencies]
uniffi = { version = "0.25", features = [ "build" ] }

[[bench]]
name = "bench_bls"
harness = false