[package]
name = "rpm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]
name = "rpm"

[dependencies]
hex = "0.4.3"
serde_json = "1.0.117"
uniffi = {  version= "0.25", features = ["cli"]}
curve25519-dalek = "4.1.3"
rand = "0.8.5"
num = "0.4.3"
lazy_static = "1.5.0"
subtle = "2.6.1"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"

[build-dependencies]
uniffi = { version = "0.25", features = [ "build" ] }

[[bench]]
name = "bench_rpm"
harness = false